--- a/docker-swarm.yml
+++ b/docker-swarm.yml
@@ -28,7 +28,22 @@ services:
 
   sync:
     image: ghcr.io/wamdata/ds-pg-restore:main
-    env_file: .env
+    volumes:
+      - "$PWD/data:/app/data"
+    environment:
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - S3_KEY=${S3_KEY}
+      - DOWNLOAD_FILE=s3_file.sql.gz
+      - PRE_PROCESSING_SQL=/app/data/pre-process.sql
+      - POST_PROCESSING_SQL=/app/data/post-process.sql
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_DB=${POSTGRES_DB:-postgres}
+    secrets:
+      - postgres_password
+      - aws_access_key_id
+      - aws_secret_access_key
     deploy:
       labels:
         - "swarm.cronjob.enable=true"
@@ -41,14 +56,18 @@ services:
   postgres:
     image: postgres:17-alpine
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_DB=${POSTGRES_DB:-postgres}
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
     secrets:
       - postgres_password
 
 secrets:
   postgres_password:
+    external: true
+  aws_access_key_id:
+    external: true
+  aws_secret_access_key:
     external: true
