--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "boto3>=1.35.86",
     "pydantic>=2.10.4",
     "pydantic-settings>=2.7.0",
+    "python-json-logger>=3.2.1",
 ]
 
 [dependency-groups]
