--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,8 +1,6 @@
 name: Docker
 
 on:
-  schedule:
-    - cron: "15 4 * * *"
   push:
     branches: ["main"]
     # Publish semver tags as releases.
@@ -11,10 +9,8 @@ on:
     branches: ["main"]
 
 env:
-  # Use docker.io for Docker Hub if empty
+  # Docker registry to use
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
@@ -22,6 +18,14 @@ jobs:
     permissions:
       contents: read
       packages: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - context: .
+            dockerfile: ./Dockerfile
+            image: ghcr.io/${{ github.repository }}
 
     steps:
       - uses: actions/checkout@v4
@@ -48,17 +52,52 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ matrix.image }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
+            type=sha,format=long
+
+      - name: Check if image already exists
+        id: check-image
+        run: |
+          SHA_TAG_IMAGE="${{ matrix.image }}:sha-${{ github.sha }}"
+          echo "Checking if image $SHA_TAG_IMAGE exists..."
+          if docker manifest inspect $SHA_TAG_IMAGE > /dev/null 2>&1; then
+            echo "exists=true" >> $GITHUB_ENV
+          else
+            echo "exists=false" >> $GITHUB_ENV
+          fi
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
+      # Only build if the image doesn't already exist
       - name: Build and push Docker image
         id: build-and-push
+        if: env.exists == 'false'
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ${{ matrix.context }}
+          file: ${{ matrix.dockerfile }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      # Skip build, just add tags
+      - name: Add extra tags to existing image
+        if: env.exists == 'true'
+        run: |
+          SHA_TAG_IMAGE="${{ matrix.image }}:sha-${{ github.sha }}"
+          echo "Adding tags to existing image $SHA_TAG_IMAGE"
+
+          # Retrieve tags from metadata
+          TAGS="${{ steps.meta.outputs.tags }}"
+          for TAG in $(echo $TAGS | tr ',' ' '); do
+            echo "Tagging $SHA_TAG_IMAGE as $TAG"
+            docker buildx imagetools create --tag $TAG $SHA_TAG_IMAGE
+          done
